ZON-1432: Configure service box XMLs

--- a/src/zeit/web/site/templates/inc/module/servicebox.html
+++ b/src/zeit/web/site/templates/inc/module/servicebox.html
@@ -1,2 +1,5 @@
 <p>Servicebox hier…</p>
-{# module.service_items | obj_debug #}
+
+{% for service in module.service_items %}
+    <p>{{ service.title }}</p>
+{% endfor %}
