--- a/sass/web.site/modules/teaser/_teaser-topic.sass
+++ b/sass/web.site/modules/teaser/_teaser-topic.sass
@@ -15,6 +15,9 @@
 		position: relative
 		margin-top: remify(6px)
 		margin-bottom: remify(34px)
+		+respond-min($break-tablet-min)
+			margin-bottom: remify(34px)
+			margin-top: remify(10px)
 		+respond-min($break-desktop-min)
 			margin-bottom: remify(43px)
 			margin-top: remify(14px)
@@ -27,16 +30,15 @@
 		width: 100%
 		z-index: 1
 		+respond-min($break-tablet-min)
-			width: 55%
+			width: 66%
 			text-align: left
-			top: remify(45px)
 			padding-left: remify(48px)
-			padding-right: remify(48px)
+			padding-right: remify(24px)
 		+respond-min($break-desktop-min)
-			width: 60%
+			width: 66%
 			top: remify(34px)
 			padding-left: remify(70px)
-			padding-right: remify(70px)
+			padding-right: remify(42px)
 	&__introduction
 		color: $white
 		font-size: $font-s
@@ -98,6 +100,8 @@
 		color: $white
 		font-size: $font-l
 		line-height: 1.12em
+		+respond-min($break-tablet-min)
+			font-size: $font-xxl
 		+respond-min($break-desktop-min)
 			font-size: $font-xxxl
 			line-height: 1.28em
@@ -126,7 +130,7 @@
 		margin-bottom: $thin
 		text-transform: uppercase
 		+respond-min($break-tablet-min)
-			font-size: $font-xs
+			font-size: $font-xxs
 		+respond-min($break-desktop-min)
 			font-size: $font-xxs
 	&__title
@@ -135,17 +139,20 @@
 		line-height: 1.12em
 		letter-spacing: $zon-letter-spacing-m
 		+respond-min($break-tablet-min)
-			font-size: $font-m
+			font-size: $font-xs
 		+respond-min($break-desktop-min)
 			font-size: $font-xs
 	&__title:hover
 		color: $white
 
 .teaser-topic-list
-	padding: 0
-	padding-left: $cp-padding
-	padding-right: remify(20px)
-	position: absolute
-	right: 0
-	top: remify(36px)
-	width: 33.33%
+	+respond-min($break-tablet-min)
+		padding: 0
+		padding-left: $cp-padding
+		padding-right: remify(20px)
+		position: absolute
+		right: 0
+		top: remify(27px)
+		width: 33.33%
+	+respond-min($break-desktop-min)
+		top: remify(36px)
