ZON-1692: Remify it!

--- a/sass/web.site/modules/teaser/_teaser-topic.sass
+++ b/sass/web.site/modules/teaser/_teaser-topic.sass
@@ -123,25 +123,25 @@
 		border: none
 	&__kicker
 		@extend %teaser-kicker
-		color: $zon_mid_grey
+		color: $zon_light_grey
 		font-size: $font-s
 		font-weight: normal
 		letter-spacing: 0.1em
 		margin-bottom: $thin
 		text-transform: uppercase
 		+respond-min($break-tablet-min)
-			font-size: $font-xxs
+			font-size: $font-xs--rem
 		+respond-min($break-desktop-min)
-			font-size: $font-xxs
+			font-size: $font-s--rem
 	&__title
 		@extend %teaser-title
 		color: $white
 		line-height: 1.12em
 		letter-spacing: $zon-letter-spacing-m
 		+respond-min($break-tablet-min)
-			font-size: $font-xs
+			font-size: $font-mm--rem
 		+respond-min($break-desktop-min)
-			font-size: $font-xs
+			font-size: $font-ml--rem
 	&__title:hover
 		color: $white
 
