--- a/sass/web.site/modules/article/_article.sass
+++ b/sass/web.site/modules/article/_article.sass
@@ -80,11 +80,13 @@
 		line-height: 1.5
 		margin: $thin $page-padding 0 $page-padding
 		color: $zon_dark_grey
+		&--marginalia
+			margin: remify(12px 0 0 0)
 		+respond-min($break-desktop-min)
 			margin: $thin remify(80px) 0 remify(80px)
 			font-size: remify(16px)
 			&--marginalia
-				margin: $thin $page-padding 0 $page-padding
+				margin: remify(12px 0 0 0)
 
 
 	&__copyright
