ZON-1432: servicebox styles

--- a/sass/web.site/screen.sass
+++ b/sass/web.site/screen.sass
@@ -39,6 +39,7 @@
 @import "modules/teaser/teaser-square"
 // centerpage
 @import "modules/centerpage/centerpage"
+@import "modules/centerpage/servicebox"
 @import "modules/centerpage/snapshot"
 // video-stage
 @import "modules/video/video-stage"
