--- a/sass/web.site/modules/centerpage/_servicebox.sass
+++ b/sass/web.site/modules/centerpage/_servicebox.sass
@@ -4,7 +4,7 @@
 		display: block
 	&__heading
 		font-size: remify(24px)
-		margin: remify(0 0 20px 0)
+		margin: remify(0 0 4px 0)
 	&__listing
 		overflow: hidden
 	&__column
@@ -25,6 +25,8 @@
 			color: $zon_grey
 			span
 				text-decoration: underline
+		+old-ie
+			margin-left: 0
 	&__icon
 		display: inline-block
 		height: remify(28px)
