--- a/sass/web.magazin/base/typography/_basics.sass
+++ b/sass/web.magazin/base/typography/_basics.sass
@@ -2,7 +2,7 @@ $article-content-max-width: 660px
 
 // Opt-in Typography
 .copy, %copy
-  p
+  p, ul, ol
     +body-type-zoom
     margin-bottom: $fine
     margin-left: auto
