--- a/sass/web.magazin/base/_ads.sass
+++ b/sass/web.magazin/base/_ads.sass
@@ -12,8 +12,8 @@
 
 .ad-slot--inbetween
   @extend %has-ad-label
-  +max-width-rem(300px)
-  +min-width-rem(300px)
+  max-width: remify(300px)
+  min-width: remify(300px)
   margin-bottom: $medium
   margin-top: $medium
   +respond-min($break-1)
