--- a/sass/web.magazin/base/_states.sass
+++ b/sass/web.magazin/base/_states.sass
@@ -1,6 +1,5 @@
 .is-constrained
-  max-width: $article-content-max-width
-  max-width: rem($article-content-max-width)
+  max-width: remify($article-content-max-width)
 
 .is-centered
   display: block
