--- a/sass/web.magazin/modules/_longform.sass
+++ b/sass/web.magazin/modules/_longform.sass
@@ -157,8 +157,7 @@ $longform-header-max-height: 1400px
     margin: 0 auto $small auto
     font-size: $font-xl--px
     font-size: $font-xl--rem
-    max-width: $longform-content-max-width
-    max-width: rem($longform-content-max-width)
+    max-width: remify($longform-content-max-width)
     +respond-min($break-1)
       font-size: $font-xxl--px
       font-size: $font-xxl--rem
@@ -274,16 +273,14 @@ $longform-header-max-height: 1400px
     margin-right: auto
 
   .is-constrained
-    max-width: $longform-content-max-width
-    max-width: rem($longform-content-max-width)
+    max-width: remify($longform-content-max-width)
     &.padded
       +box-sizing(content-box)
     +respond-min($break-3)
-      max-width: $longform-content-max-width*1.13
-      max-width: rem($longform-content-max-width)*1.13
+      max-width: remify($longform-content-max-width*1.13)
 
   .figure-horizontal, .figure-horizontal--right
-    +max-width-rem($longform-inline-max-width)
+    max-width: remify($longform-inline-max-width)
     margin-left: auto
     margin-right: auto
     +respond-min(em($bp-adjust-horizontal-figures--2))
@@ -293,7 +290,7 @@ $longform-header-max-height: 1400px
         float: none
         width: 100%
       .figure__caption, figcaption
-        +max-width-rem(240px)
+        max-width: remify(240px)
         width: em(200px)
         position: absolute
         left: 100%
@@ -307,7 +304,7 @@ $longform-header-max-height: 1400px
       .figure__caption, figcaption
         width: 100%
     .figure__media, img
-      +max-width-rem($longform-inline-max-width)
+      max-width: remify($longform-inline-max-width)
   .figure-horizontal--right
     +respond-min(em($bp-adjust-horizontal-figures--2))
       .figure__caption, figcaption
@@ -315,7 +312,7 @@ $longform-header-max-height: 1400px
         left: auto
   .figure-full-width
     .figure__caption, figcaption
-      +max-width-rem($longform-image-caption-max-width)
+      max-width: remify($longform-image-caption-max-width)
       padding-right: 0
 
   .inline-gallery__wrap
