--- a/src/zeit/web/site/templates/inc/area/topic.html
+++ b/src/zeit/web/site/templates/inc/area/topic.html
@@ -10,7 +10,7 @@
         ["zeit.web.site:templates/inc/teaser/zon-topic-main.tpl",
          "zeit.web.site:templates/inc/teaser/default.tpl"] ignore missing %}
     <div class="teaser-topic-list">
-    {% for module in area.values()[1:] -%}
+    {% for module in area.values()[1:4] -%}
         {% set teaser = module | first_child %}
         {% include
             ["zeit.web.site:templates/inc/teaser/zon-topic-list.tpl",
