--- a/src/zeit/web/site/templates/centerpage.html
+++ b/src/zeit/web/site/templates/centerpage.html
@@ -11,12 +11,14 @@ Available attributes:
 
 {% block metadata %}
     <div class="header__metadata">
+        {% if view.topic_links | length %}
         <div class="header__tags">
             <span class="header__tags__label">{{ view.topic_links.title | hide_none }}</span>
             {% for label, link in view.topic_links %}
             <a href="{{ link }}" title="{{ label }}" class="header__tags__link">{{ label }}</a>
             {% endfor %}
         </div>
+        {% endif %}
         <div class="header__date">{{ view.displayed_last_published_semantic | format_date('long') }}</div>
     </div>
 {% endblock metadata %}
