--- a/sass/web.site/modules/teaser/_teaser-topic.sass
+++ b/sass/web.site/modules/teaser/_teaser-topic.sass
@@ -34,7 +34,7 @@
 			padding-right: remify(24px)
 			text-align: left
 			top: remify(35px)
-			width: 58%
+			width: 57%
 		+respond-min($break-desktop-min)
 			padding-right: remify(42px)
 			width: 66.66%
@@ -155,7 +155,8 @@
 		position: absolute
 		right: 0
 		top: remify(27px)
-		width: 42%
 	+respond-min($break-tablet-min)
 		top: remify(36px)
+		width: 43%
+	+respond-min($break-desktop-min)
 		width: 33.33%
