--- a/sass/web.site/modules/teaser/_teaser-topic.sass
+++ b/sass/web.site/modules/teaser/_teaser-topic.sass
@@ -7,14 +7,14 @@
 
 .teaser-topic-main
 	@extend %teaser
-	margin: $petite (-$petite)
+	margin: $petite 0
 	padding: 0
 	position: relative
 	&__heading
 		@extend %teaser-heading
 		position: relative
 		margin-top: remify(6px)
-		margin-bottom: remify(34px)
+		margin-bottom: remify(24px)
 		+respond-min($break-tablet-min)
 			margin-bottom: remify(34px)
 			margin-top: remify(10px)
@@ -26,13 +26,15 @@
 		padding: 0
 		position: absolute
 		text-align: center
-		top: remify(27px)
+		top: 50%
+		transform: translate(0, -60%)
 		width: 100%
 		z-index: 1
 		+respond-min($break-tablet-min)
-			padding-left: remify(70px)
+			padding-left: remify(50px)
 			padding-right: remify(24px)
 			text-align: left
+			transform: none
 			top: remify(35px)
 			width: 57%
 		+respond-min($break-desktop-min)
@@ -94,7 +96,7 @@
 	&__title
 		@extend %teaser-title
 		color: $white
-		font-size: $font-l--rem
+		font-size: $font-mxl--rem
 		line-height: 1.12em
 		+respond-min($break-tablet-min)
 			font-size: remify(26px)
