--- a/sass/web.site/screen.sass
+++ b/sass/web.site/screen.sass
@@ -44,6 +44,7 @@
 @import "modules/centerpage/centerpage"
 @import "modules/centerpage/servicebox"
 @import "modules/centerpage/snapshot"
+@import "modules/centerpage/dynamic-cp-header"
 
 // video-stage
 @import "modules/video/video-stage"
