--- a/sass/web.site/modules/article/_article-heading.sass
+++ b/sass/web.site/modules/article/_article-heading.sass
@@ -1,5 +1,5 @@
 .article-heading
-	margin: remify(20px) 0 remify(25px)
+	margin: remify(20px 0 25px)
 	&__kicker
 		color: $zon-red
 		display: block
@@ -17,6 +17,35 @@
 			font-size: remify(42px)
 	&__colon
 		+visuallyhidden
+
+	&__media
+		margin: 0 0 remify(9px)
+	&__media-item
+		width: 100%
+
+	+respond-min($break-phablet-min)
+		&--liveblog
+			font-size: 0
+			margin-top: remify(90px)
+
+		&__headline,
+		&__image
+			display: inline-block
+			vertical-align: bottom
+
+		&__headline
+			margin: 0
+			padding-left: 3.75%
+			width: 65%
+
+		&__image
+			width: 35%
+
+	+respond-min($break-desktop-min)
+		&--liveblog
+			margin-left: remify(-90px)
+		&__media
+			margin-bottom: remify(10px)
 
 .breaking-news-heading
 	background: #fffee8
