ZON-1692: Use default button colors

--- a/sass/web.site/modules/teaser/_teaser-topic.sass
+++ b/sass/web.site/modules/teaser/_teaser-topic.sass
@@ -74,7 +74,7 @@
 			max-width: 100%
 			position: static
 	&__readmore
-		+zon-button-dark($background-color: rgba(0, 0, 0, 0.5), $hover-background-color: rgba(0, 0, 0, 0.7), $margin: 0, $padding: remify(10px 40px))
+		+zon-button-dark($margin: 0, $padding: remify(10px 42px))
 
 	&__title
 		@extend %teaser-title
