ZON-1692: Use button mixin

--- a/sass/web.site/modules/video/_video-centerpage-link.sass
+++ b/sass/web.site/modules/video/_video-centerpage-link.sass
@@ -1,6 +1,5 @@
 .video-centerpage-link
-	+zon-button-dark
-	margin: 0 0 $page-padding 0
+	+zon-button-dark($margin: 0 0 $page-padding)
 	width: 100%
 	+respond-min($break-phablet-min)
 		position: absolute
