--- a/sass/web.site/modules/video/_video-text-playbutton.sass
+++ b/sass/web.site/modules/video/_video-text-playbutton.sass
@@ -25,9 +25,7 @@
 		position: absolute
 		z-index: 2
 		+respond-min($break-phablet-min)
-			+zon-button-dark
-			color: $white
-			margin: 0
+			+zon-button-dark($color: $white, $margin: 0)
 		+respond-min($break-desktop-min)
 			bottom: auto
 			left: auto
