ZON-1692: Add font-smoothing

--- a/sass/web.site/modules/teaser/_teaser-topic.sass
+++ b/sass/web.site/modules/teaser/_teaser-topic.sass
@@ -118,6 +118,7 @@
 			font-size: $font-mm--rem
 	&__title
 		@extend %teaser-title
+		+font-smoothing
 		color: $white
 		line-height: 1.12em
 		letter-spacing: $zon-letter-spacing-m
