ZON-1597: Equalize text output for ZMO and ZON

--- a/sass/web.magazin/modules/_nextread.sass
+++ b/sass/web.magazin/modules/_nextread.sass
@@ -30,6 +30,8 @@ $nextread-maximal-height: em(320px)
 	margin: $big 0 $junior
 	text-align: center
 	text-transform: uppercase
+	&:after
+		content: ":"
 
 .article__nextread__wrap
 	text-align: center
