ZON-1597: Add styling

--- a/sass/web.site/screen.sass
+++ b/sass/web.site/screen.sass
@@ -71,6 +71,7 @@
 @import "modules/pagination"
 @import "modules/article/portraitbox"
 @import "modules/article/article-interactions"
+@import "modules/article/nextread"
 
 // article - column
 @import "modules/article/column-heading"
