--- a/sass/web.site/modules/centerpage/_servicebox.sass
+++ b/sass/web.site/modules/centerpage/_servicebox.sass
@@ -17,7 +17,10 @@
 		display: block
 		font-size: remify(14px)
 		line-height: 2.2
-		margin-left: remify(-5px)
+		position: relative
+		span
+			display: block
+			padding-left: remify(28.8px)
 		+link
 			color: $zon_grey
 			text-decoration: none
@@ -28,9 +31,54 @@
 		+old-ie
 			margin-left: 0
 	&__icon
-		display: inline-block
 		height: remify(28px)
-		vertical-align: middle
+		left: remify(-2px)
+		position: absolute
+		top: remify(2px)
 		width: remify(28px)
-		&--newsletter
-			margin-top: remify(-4px)
+		// the values we're delivered in rem by the design dep.
+		&--seniorenratgeber,
+		&--tarifvergleiche
+			width: remify(1.45*16px)
+			height: remify(1.45*16px)
+		&--automarkt,
+		&--headhunter,
+		&--immobiliensuche
+			width: remify(1.5*16px)
+			height: remify(1.5*16px)
+		&--abo-services,
+		&--ferienhaeuser
+			width: remify(1.55*16px)
+			height: remify(1.55*16px)
+		&--jobsuche,
+		&--kataloge,
+		&--kulturangebote,
+		&--newsletter,
+		&--partnersuche,
+		&--schach,
+		&--urlaubsziele
+			width: remify(1.6*16px)
+			height: remify(1.6*16px)
+		&--spiele,
+		&--zeit-audio
+			width: remify(1.65*16px)
+			height: remify(1.65*16px)
+		&--bildung-weiterbildung
+			width: remify(1.7*16px)
+			height: remify(1.7*16px)
+		&--studiengangsuche,
+		&--uni-rankings
+			width: remify(1.8*16px)
+			height: remify(1.8*16px)
+		&--abo-services,
+		&--apps-epaper,
+		&--bildung-weiterbildung,
+		&--tarifvergleiche,
+		&--uni-rankings,
+			top: remify(1px)
+		&--headhunter,
+		&--schach,
+		&--studiengangsuche,
+		&--urlaubsziele,
+		&--zeit-audio,
+			top: 0
