Styling for newsticker

--- a/sass/web.site/screen.sass
+++ b/sass/web.site/screen.sass
@@ -40,6 +40,7 @@
 // centerpage
 @import "modules/centerpage/centerpage"
 @import "modules/centerpage/snapshot"
+@import "modules/centerpage/newsticker"
 // video-stage
 @import "modules/video/video-stage"
 @import "modules/video/video-stage-heading"
