--- a/sass/web.site/modules/centerpage/_newsticker.sass
+++ b/sass/web.site/modules/centerpage/_newsticker.sass
@@ -1,45 +1,44 @@
 .newsticker
-    &__head 
-        font-weight: bold
-        margin-bottom: remify(25px)
-        min-height: remify(30px)
-        position: relative
+	&__head 
+		font-weight: bold
+		margin-bottom: remify(25px)
+		min-height: remify(30px)
+		position: relative
 
-    &__title
-        font-size: remify(24px)
-        left: 0
-        letter-spacing: $zon-letter-spacing-m 
-        position: absolute
-    &__link
-        font-size: remify(14px)
-        position: absolute
-        right: 0
-        top: remify(10px)
-        &:after
-            content: ' \203A' // › = Single right-pointing angle quotation mark
-    &__column
-        +respond-min($break-tablet-min)
-            +inline-block(top)
-            width: 48%
-    
+	&__title
+		font-size: remify(24px)
+		left: 0
+		letter-spacing: $zon-letter-spacing-m 
+		position: absolute
+	&__link
+		font-size: remify(14px)
+		position: absolute
+		right: 0
+		top: remify(10px)
+		&:after
+			content: ' \203A' // › = Single right-pointing angle quotation mark
+	&__column
+		+respond-min($break-tablet-min)
+		+inline-block(top)
+		width: 48%
+		&:first-child
+			padding-right: remify(15px)
+
 .newsteaser
-    font-size: remify(14px)
+	font-size: remify(14px)
 
-    &__time
-        display: table-cell 
-        font-family: $font-tabletgothicnarrow
-    &__text
-        display: table-cell
-        padding-left: remify(10px)
-    &__kicker
-        color: $color-text-highlighted
-        font-family: $font-tabletgothicnarrow
-        font-weight: bold
+	&__time
+		display: table-cell 
+		font-family: $font-tabletgothicnarrow
+	&__text
+		display: table-cell
+		padding-left: remify(10px)
+	&__kicker
+		color: $color-text-highlighted
+		font-family: $font-tabletgothicnarrow
 		letter-spacing: $zon-letter-spacing-m
-    &__title
-        
-    
-    &__product
-        color: $zon_mid_grey 
-        padding-left: remify(5px)
-       
+	&__title
+
+	&__product
+		color: $zon_mid_grey 
+		padding-left: remify(5px)
