--- a/src/zeit/web/site/templates/inc/area/news.html
+++ b/src/zeit/web/site/templates/inc/area/news.html
@@ -1,3 +1,9 @@
+{% macro include_teaser_time(teaser, layout_id='', modifier='') -%}
+    <time class="{{ layout_id }}__datetime {{modifier}}"
+    datetime="{{ teaser | mod_date | format_date('iso8601') }}">{{ teaser |
+    mod_date | format_date('time_only') | truncate(5, True, '') | hide_none }}</time>
+{%- endmacro %}
+
 <div class="{{ 'cp-area' | with_mods(area.kind) }}">
 <div class="newsticker">
     {% block before_module_list %}
@@ -9,16 +15,19 @@
     {% for column in area.values() | map('get_module') | slice(2) -%}
         <div class="newsticker__column newsticker__column-{{ loop.index }}">
         {% for module in column %} 
+            {% set teaser = module | first_child %}
+        
             <article class="newsteaser">
-                <time class="newsteaser__time">11:00</time>
+                <time class="newsteaser__time">{{
+                    include_teaser_time(module) }}</time>
                 <div class="newsteaser__text">
-                    <a class="newsteaser__combined-link" title="Big Data - Schwanger ohne digitale Spuren" href="http://localhost:9090/artikel/autorenbox">
-                        <span class="newsteaser__kicker">Big Data</span>
-                        <span class="newsteaser__title">Schwanger ohne digitale
-                        Spuren. Hier noch etwas mehr Text, damit es zwei Zeilen
-                        werden</span>
+                    <a class="newsteaser__combined-link" title="{{
+                        teaser.teaserSupertitle or teaser.supertitle |
+                        hide_none }} - {{ teaser.teaserTitle or teaser.title | hide_none }}" href="{{ teaser.uniqueId | translate_url }}">
+                        <span class="newsteaser__kicker">{{ teaser.teaserSupertitle or teaser.supertitle | hide_none }}</span>
+                        <span class="newsteaser__title">{{ teaser.teaserTitle or teaser.title | hide_none }}</span>
                     </a>
-                    <span class="newsteaser__product">ZEDE</span>
+                    <span class="newsteaser__product">{{ teaser.product.id | hide_none }}</span>
                 </div>
             </article>
         {% endfor %}
