Product id should be smaller

--- a/sass/web.site/modules/centerpage/_newsticker.sass
+++ b/sass/web.site/modules/centerpage/_newsticker.sass
@@ -4,7 +4,6 @@
 		margin-bottom: remify(25px)
 		min-height: remify(30px)
 		position: relative
-
 	&__title
 		font-size: remify(24px)
 		left: 0
@@ -37,9 +36,9 @@
 	&__kicker
 		color: $color-text-highlighted
 		font-family: $font-tabletgothicnarrow
+		font-weight: bold
 		letter-spacing: $zon-letter-spacing-m
-	&__title
-
 	&__product
 		color: $zon_mid_grey 
 		padding-left: remify(5px)
+		font-size: remify(12px)
