--- a/sass/web.site/modules/centerpage/_newsticker.sass
+++ b/sass/web.site/modules/centerpage/_newsticker.sass
@@ -30,6 +30,7 @@
 	&__time
 		display: table-cell 
 		font-family: $font-tabletgothicnarrow
+		width: remify(36px)
 	&__text
 		display: table-cell
 		padding-left: remify(10px)
