--- a/sass/web.site/modules/_adplaces.sass
+++ b/sass/web.site/modules/_adplaces.sass
@@ -1,113 +1,52 @@
-$desktop_mobile_ad_breakpoint: em(768px)
-$mobile_ad_width: em(320px)
-$mobile_middle_ad_break_left_margin: $mobile_ad_width + $page-padding--small*2
-
-// extend these please
-%ad__label
-	color: $zon-charcoal
-	font-family: $font-tabletgothic
-	font-size: $font-xxs
-	letter-spacing: 2px
-	text-align: left
-	text-transform: uppercase
-
-%ad__mr
+%medium-rectangle
 	background-color: $white
 	color: $zon-charcoal
-	margin: $large auto
-	+respond-min($break-1)
-		border-top: 1px solid $zon-charcoal
-		border-bottom: 1px solid $zon-charcoal
-		max-width: 41.25rem
-		padding: $small 0
-	+respond-min($break-3)
-		border: none
-		float: right
-		margin: 0 0 $compact $medium
-		max-width: 300px
-		padding: 0
-	object
-		display: block
-
-%ad__mr__label
-	@extend %ad__label
+	margin: remify(40px) auto
 	width: 300px
-	margin: 0 auto
-
-%ad__mr__inner
-	margin: 0 auto
-	width: 300px
-
-
-// desktop adplaces
-.ad-tile_3
+%monsterbanner
 	max-width: 940px
 	margin: 0 auto
 	padding: $little 0
+
+.ad
 	&__label
-		@extend %ad__label
+		color: $zon_mid_grey
+		font-family: $font-tabletgothic
+		font-size: remify(9px)
+		letter-spacing: remify(1.5px)
+		line-height: remify(10px)
 		text-align: right
-
-.ad-tile_4
-	@extend %ad__mr
-	&__label
-		@extend %ad__mr__label
-	&__inner
-		@extend %ad__mr__inner
-
-.ad-tile_7
-	@extend %ad__mr
-	&__label
-		@extend %ad__mr__label
-	&__inner
-		@extend %ad__mr__inner
-	&--on-article
-		clear: both
-	&--on-centerpage
-		margin: 0 auto remify(45px) auto
-		+respond-min($break-2)
-			padding: 0
-			border: none
-		+respond-min($break-3)
-			float: none
-		// a little bit unbemmy, but this would end rather complicated
-		.ad-tile_7__label
-			display: none
-
-.ad-tile_8
-	@extend %ad__mr
-	&__label
-		@extend %ad__mr__label
-	&__inner
-		@extend %ad__mr__inner
-	&--on-article
-		clear: both
-	&--on-centerpage
-		margin: 0 auto $compact auto
-		+respond-min($break-2)
-			padding: 0
-			border: none
-		+respond-min($break-3)
-			float: none
-		// a little bit unbemmy, but this would end rather complicated
-		.ad-tile_8__label
-			display: none
-
-
-// hide all desktop ads on mobile
-*[data-ad_minwidth='768']
-	display: none
-	+respond-min($desktop_mobile_ad_breakpoint)
-		display: block
-
-// mobile
-.iqd-mobile-adplace
-	width: $mobile_ad_width
-	margin: auto
-	a > *, iframe
-		margin: $fine auto $fine auto
-	+respond-min($desktop_mobile_ad_breakpoint)
+		text-transform: uppercase
+		&--tile_3,
+		&--tile_12
+			text-align: right
+	&--tile_3,
+	&--tile_12
+		@extend %monsterbanner
+	&--tile_7,
+	&--tile_8,
+	&--tile_9,
+	&--tile_10,
+	&--tile_11
+		@extend %medium-rectangle
+	&--tile_7-on-centerpage,
+	&--tile_8-on-centerpage,
+	&--tile_9-on-centerpage,
+	&--tile_10-on-centerpage,
+	&--tile_11-on-centerpage
 		display: none
-	&--middle
-		+respond-max($mobile_middle_ad_break_left_margin)
-			margin-left: -$page-padding--small
+		&:first-child
+			margin-top: remify(15px)
+		+respond_min($break-desktop-min)
+			display: block
+	&--tile_5-on-article
+		margin: remify(30px) auto
+		width: 400px
+	&--tile_7-on-article
+		clear: both
+		+respond_min($break-desktop-min)
+			float: right
+			margin: 0 remify(60px) remify(28px) remify(36px)
+			max-width: 300px
+			padding: 0
+
