Ads: Add google ad at article end

--- a/src/zeit/web/site/templates/article.html
+++ b/src/zeit/web/site/templates/article.html
@@ -28,6 +28,12 @@
     </div>
 {% endblock article_pages %}
 
+{% block article_google_ad %}
+    {% if view.context.advertising_enabled -%}
+        {{ blocks.adplace_desktop(view.banner(5)) }}
+    {%- endif %}
+{% endblock article_google_ad %}
+
 {% block article_pagination %}
     {% include "zeit.web.site:templates/inc/article/pagination.tpl" ignore missing %}
 {% endblock article_pagination %}
