--- a/src/zeit/web/site/templates/content.html
+++ b/src/zeit/web/site/templates/content.html
@@ -58,7 +58,8 @@
             {% block article_pages %}
                 <!-- Here goes the content for a page -->
             {% endblock article_pages %}
-
+            {% block article_google_ad %}
+            {% endblock article_google_ad %}
             {% block article_pagination %}
                 <!-- Here goes the pagination -->
             {% endblock article_pagination %}
