--- a/src/zeit/web/site/templates/inc/module/videostage.html
+++ b/src/zeit/web/site/templates/inc/module/videostage.html
@@ -1,3 +1,8 @@
+{% import 'zeit.web.site:templates/macros/layout_macro.tpl' as lama with context %}
+
+{% if view.is_hp and view.context.advertising_enabled -%}
+    {{ lama.adplace_desktop(view.banner(10)) }}
+{%- endif %}
 <section class="video-stage" id="video-stage">
     {# html5, eine section braucht eine headline, falls das seomäßig nicht geht, können wir auch nicht section nehmen (NB) #}
     <header>
