Ads: Adplace comments first steps

--- a/sass/web.site/modules/_adplaces.sass
+++ b/sass/web.site/modules/_adplaces.sass
@@ -15,6 +15,7 @@
 		font-size: remify(9px)
 		letter-spacing: remify(1.5px)
 		line-height: remify(10px)
+		margin-bottom: remify(10px)
 		text-align: right
 		text-transform: uppercase
 		&--tile_3,
@@ -49,4 +50,8 @@
 			margin: 0 remify(60px) remify(28px) remify(36px)
 			max-width: 300px
 			padding: 0
+	&--tile_8-on-article
+		background: $zon_lighter_grey
+		margin: 0 auto
+		padding: remify(30px 0)
 
