--- a/sass/web.site/modules/comments/_comment.sass
+++ b/sass/web.site/modules/comments/_comment.sass
@@ -15,6 +15,11 @@ $color-comment-border: $zon_light_grey
 	&--author + &--author // keep border-top between consecutive author comments
 		border-top-width: 1px
 
+	&__ad
+		background: $zon_lighter_grey
+		margin: 0
+		padding: 0
+
 	&__container
 		margin-left: auto
 		margin-right: auto
