--- a/sass/web.site/modules/_defaults.sass
+++ b/sass/web.site/modules/_defaults.sass
@@ -10,14 +10,10 @@ body
 	margin: 0
 	padding: 0
 
-img
+figure img
 	display: block
 	height: auto
 	max-width: 100%
-
-*[id^='iqadtile'] noscript img
-	width: auto !important
-	height: auto !important
 
 a
 	// normal, hover, active, visited, focus
