ZON-1806: lastNode wiederherstellen

--- a/src/zeit/web/core/templates/inc/ads/adcontroller/finalize.html
+++ b/src/zeit/web/core/templates/inc/ads/adcontroller/finalize.html
@@ -4,4 +4,13 @@
 		AdController.finalize();
 	}
 </script>
+<div id="iqdLastNode">
+    <script type="text/javascript">
+        var IQDComplete = {
+            init : function() {
+                return true;
+            }
+        };
+    </script>
+</div>
 {% endif %}
