--- a/src/zeit/web/site/templates/layout.html
+++ b/src/zeit/web/site/templates/layout.html
@@ -96,6 +96,13 @@
             <div id="iqd_mainAd" >
                 <div id="iqd_align_Ad">
                     <div id="iqd_topAd">
+                        <div id="iqadtileOOP">
+                            <script type="text/javascript">
+                                if (typeof AdController !== 'undefined' && AdController._siteConfig._adapterName != 'dfp5') {
+                                    AdController.render('iqadtileOOP');
+                                }    
+                            </script>
+                        </div>
                         {{ lama_core.adplace(view.banner(1), view) }}
                         <div id="iqd_rightAd">
                             {{ lama_core.adplace(view.banner(2), view) }}
