--- a/src/zeit/web/site/templates/inc/area/minor.html
+++ b/src/zeit/web/site/templates/inc/area/minor.html
@@ -1,4 +1,4 @@
-{% import "zeit.web.core:templates/macros/layout_macro.tpl" as lama with context %}
+{% import "zeit.web.core:templates/macros/layout_macro.tpl" as lama %}
 
 {% extends "zeit.web.site:templates/inc/area/default.html" %}
 
