ZON-1821: Update styles

--- a/sass/web.site/_constants.sass
+++ b/sass/web.site/_constants.sass
@@ -8,6 +8,7 @@ $meta-line-height: 1.7
 $break-phablet-min: em(520px)
 $break-tablet-min: em(768px)
 $break-desktop-min: em(980px)
+$break-areas: $break-tablet-min
 
 // letter-spacing (a half of a pixel)
 $zon-letter-spacing-l: 0.08em
