--- a/sass/web.site/modules/centerpage/_centerpage.sass
+++ b/sass/web.site/modules/centerpage/_centerpage.sass
@@ -24,7 +24,7 @@
 	&--topic
 		padding: 0
 		position: relative
-	+respond-min($break-tablet-min)
+	+respond-min($break-areas)
 		&--major
 			width: 66.66%
 		&--duo
