--- a/src/zeit/web/site/templates/inc/module/servicebox.html
+++ b/src/zeit/web/site/templates/inc/module/servicebox.html
@@ -1,4 +1,4 @@
-{% import 'zeit.web.core:templates/macros/layout_macro.tpl' as lama_core with context %}
+{% import 'zeit.web.core:templates/macros/layout_macro.tpl' as lama_core %}
 <nav class="servicebox" id="servicebox">
     <h3 class="servicebox__heading">Service</h3>
     <div class="servicebox__listing">
@@ -6,7 +6,7 @@
         <div class="servicebox__column">
             {% for service in service_column %}
             <a class="servicebox__link" href="{{ service.href }}">
-                {{ lama_core.use_svg_icon('servicebox-{}'.format(service.id), 'servicebox__icon servicebox__icon--{}'.format(service.id)) }}
+                {{ lama_core.use_svg_icon('servicebox-{}'.format(service.id), 'servicebox__icon servicebox__icon--{}'.format(service.id), request) }}
                 <span>{{ service.title }}</span>
             </a>
             {% endfor %}
