ZON-1821: Use mixin for teaser text-shadow

--- a/sass/_mixins.sass
+++ b/sass/_mixins.sass
@@ -55,6 +55,9 @@
 		width: 100%
 		+background-image(linear-gradient($angle, $gradient))
 
+=teaser-image-text-shadow
+	text-shadow: 0 0 10px rgba(0, 0, 0, .5)
+
 =fake-box-dimming($color: $black, $perc: 0.5)
 	&:after
 		content: ''
