--- a/sass/web.site/modules/teaser/_teaser-fullwidth.sass
+++ b/sass/web.site/modules/teaser/_teaser-fullwidth.sass
@@ -9,7 +9,7 @@
 		overflow: hidden
 		padding: 0
 		position: relative
-		text-shadow: 0 0 10px rgba(0, 0, 0, .5)
+		+teaser-image-text-shadow
 		&:before
 			content: ''
 			min-height: 100%
