--- a/sass/web.site/modules/centerpage/_centerpage.sass
+++ b/sass/web.site/modules/centerpage/_centerpage.sass
@@ -24,6 +24,11 @@
 	&--topic
 		padding: 0
 		position: relative
+	&--ranking
+		float: none
+		max-width: remify(660px)
+		margin-left: auto
+		margin-right: auto
 	+respond-min($break-tablet-min)
 		&--major
 			width: 66.66%
