--- a/sass/web.site/modules/centerpage/_dynamic-cp-header.sass
+++ b/sass/web.site/modules/centerpage/_dynamic-cp-header.sass
@@ -1,7 +1,9 @@
 .dynamic-cp-header
 	background-color: $zon_lighter_grey
-	margin: remify(0 -20px 10px -20px) // neutralize $cp-paddings
+	margin: remify(0 -20px 32px -20px) // neutralize $cp-paddings
 	padding: remify(40px 20px)
+	+respond-min($break-tablet-min)
+		margin-bottom: remify(48px)
 	&__title
 		font-size: remify(22px)
 		margin: 0
