--- a/src/zeit/web/site/templates/inc/module/videostage.html
+++ b/src/zeit/web/site/templates/inc/module/videostage.html
@@ -1,7 +1,7 @@
-{% import 'zeit.web.site:templates/macros/layout_macro.tpl' as lama with context %}
+{% import 'zeit.web.core:templates/macros/layout_macro.tpl' as lama_core %}
 
 {% if view.is_hp and view.context.advertising_enabled -%}
-    {{ lama.adplace_desktop(view.banner(10)) }}
+    {{ lama_core.adplace(view.banner(10), view) }}
 {%- endif %}
 <section class="video-stage" id="video-stage">
     {# html5, eine section braucht eine headline, falls das seomäßig nicht geht, können wir auch nicht section nehmen (NB) #}
