Remove unnecessary imports with context

--- a/src/zeit/web/site/templates/content.html
+++ b/src/zeit/web/site/templates/content.html
@@ -1,5 +1,5 @@
 {% extends "zeit.web.site:templates/layout.html" %}
-{% import "zeit.web.site:templates/macros/article_macro.tpl" as blocks with context %}
+{% import "zeit.web.site:templates/macros/article_macro.tpl" as blocks %}
 
 {% block main %}
     {% block content %}
