--- a/src/zeit/web/site/templates/gallery.html
+++ b/src/zeit/web/site/templates/gallery.html
@@ -1,5 +1,6 @@
 {% extends "zeit.web.site:templates/content.html" %}
-{% import "zeit.web.site:templates/macros/article_macro.tpl" as blocks with context %}
+{% import "zeit.web.site:templates/macros/article_macro.tpl" as blocks %}
+
 {% block article_pages %}
     <div class="article-page">
         {{ blocks.inlinegallery(view.images, wrapper_class='gallery') }}
