--- a/src/zeit/web/site/templates/layout.html
+++ b/src/zeit/web/site/templates/layout.html
@@ -1,4 +1,4 @@
-{% import 'zeit.web.core:templates/macros/layout_macro.tpl' as lama_core with context %}
+{% import 'zeit.web.core:templates/macros/layout_macro.tpl' as lama_core %}
 <!DOCTYPE html>
 <!--[if lt IE 7]> <html lang="de" class="no-js lt-ie9 lt-ie8 lt-ie7"> <![endif]-->
 <!--[if IE 7]> <html lang="de" class="no-js lt-ie9 lt-ie8"> <![endif]-->
@@ -100,7 +100,7 @@
                             <script type="text/javascript">
                                 if (typeof AdController !== 'undefined' && AdController._siteConfig._adapterName != 'dfp5') {
                                     AdController.render('iqadtileOOP');
-                                }    
+                                }
                             </script>
                         </div>
                         {{ lama_core.adplace(view.banner(1), view) }}
