Use SASS variable

--- a/sass/web.site/modules/_defaults.sass
+++ b/sass/web.site/modules/_defaults.sass
@@ -2,7 +2,7 @@
 	+box-sizing(border-box)
 
 body
-	background-color: #41464D
+	background-color: $color-body-bg
 	color: $color-text
 	font-family: $font-tabletgothic
 	font-size: $font-m
