--- a/sass/web.site/_constants.sass
+++ b/sass/web.site/_constants.sass
@@ -35,7 +35,7 @@ $zon-warm-grey: #f0f0ed
 $spektrum_de_blue: #4d86a4
 
 // semantic colors
-$color-body-bg: $white
+$color-body-bg: #41464d
 $color-page-bg: $white
 $color-text: $zon-charcoal
 $color-text-highlighted: $zon-red
