--- a/src/zeit/web/site/templates/inc/module/playlist.html
+++ b/src/zeit/web/site/templates/inc/module/playlist.html
@@ -4,16 +4,15 @@
         <h6 class="video-stage-heading">Videos auf <span class="video-stage-heading__logo icon-logo-zon-large">ZEIT ONLINE</span></h6>
     </header>
     {# We heard you like modules, so we put some modules in your module (ND) #}
-    {% set video_module = module.videos %}
     <div class="video-stage-main">
         {% with %}
-            {% set teaser = video_module[0] %}
+            {% set teaser = module.videos[0] %}
             {% include "zeit.web.site:templates/inc/teaser/video-large.tpl" ignore missing %}
         {% endwith %}
     </div>
     <div class="video-stage-secondary">
         <h6 class="video-stage-secondary__title">Die neuesten Videos</h6>
-        {% for teaser in video_module[1:4] %}
+        {% for teaser in module.videos[1:4] %}
             {% include "zeit.web.site:templates/inc/teaser/video-small.tpl" ignore missing %}
         {% endfor %}
     </div>
@@ -23,7 +22,7 @@
             <label for="series_select" class="video-series__label">Videoserien</label>
             <select id="series_select" class="video-series__select" name="serie">
                 <option>Bitte auswählen</option>
-                {% for video in video_module.video_series_list %}
+                {% for video in module.video_series_list %}
                     <option value="{{ video.url }}">{{ video.title }}</option>
                 {% endfor %}
             </select>
