Add SASS variable for TiemannLight font-family

--- a/sass/_constants.sass
+++ b/sass/_constants.sass
@@ -179,3 +179,4 @@ $mtb-teaser-width: em(270px)
 $font-franziska: "FranziskaWebPro", $serif-fallbacks
 $font-tabletgothic: "TabletGothic", $sans-fallbacks
 $font-tabletgothicnarrow: "TabletGothicNarrow", $sans-fallbacks
+$font-tiemann: "TiemannLight", $serif-fallbacks
