--- a/sass/web.magazin/modules/_cp-buzz.sass
+++ b/sass/web.magazin/modules/_cp-buzz.sass
@@ -61,7 +61,7 @@
         margin: $micro 0
 
 .cp_buzz__service__list__entry:before
-    +tiemann
+    font-family: $font-tiemann
     content: counter(buzz-list)
     counter-increment: buzz-list
     font-size: $font-xxxl
