--- a/sass/web.magazin/modules/_cp.sass
+++ b/sass/web.magazin/modules/_cp.sass
@@ -10,7 +10,7 @@ $icon-galerie-icon-white-width: em(40px)
 	letter-spacing: 0.3em
 	text-transform: uppercase
 	font-size: $font-xl
-	font-family: "TiemannLight", serif
+	font-family: $font-tiemann
 	text-align: center
 	display: block
 
