Harmonize button styles

--- a/sass/web.site/modules/teaser/_teaser-beta.sass
+++ b/sass/web.site/modules/teaser/_teaser-beta.sass
@@ -39,8 +39,7 @@
 		display: block
 
 	&__button
-		+zon-button-light
-		margin: remify(14px 6px)
+		+zon-button-light($margin: remify(14px 6px))
 
 .js #beta-toggle-submit
 	display: none
