--- a/sass/web.site/modules/teaser/_teaser-topic.sass
+++ b/sass/web.site/modules/teaser/_teaser-topic.sass
@@ -74,7 +74,7 @@
 			max-width: 100%
 			position: static
 	&__readmore
-		+zon-button-dark($margin: 0, $padding: remify(10px 42px))
+		+zon-button-dark($margin: 0)
 
 	&__title
 		@extend %teaser-title
