--- a/sass/web.site/modules/_pagination.sass
+++ b/sass/web.site/modules/_pagination.sass
@@ -7,9 +7,6 @@
 		+link-colors($zon_grey, $color-link--hover, $color-link--active, $zon_grey, $color-link--focus)
 	&__button
 		+zon-button-inky
-		font-weight: normal
-		letter-spacing: 0.1em
-		line-height: remify(18px)
 		&--previous
 			&:before
 				content: "\27E8" // \27E9 \2329 \3008
@@ -50,11 +47,7 @@
 .pager
 	margin: remify(16px 0 32px)
 	&__button
-		+zon-button-inky
-		font-weight: normal
-		letter-spacing: 0.1em
-		line-height: remify(18px)
-		margin: remify(20px 14px 0 0)
+		+zon-button-inky($margin: remify(20px 14px 0 0))
 		&--previous
 			&:before
 				content: "\27E8" // \27E9 \2329 \3008
