--- a/sass/web.site/modules/teaser/_teaser-printbox.sass
+++ b/sass/web.site/modules/teaser/_teaser-printbox.sass
@@ -77,24 +77,10 @@
 			color: $zon-red
 
 	&__button
+		+zon-button-light($margin: remify(12px) 0)
 		display: block
-		color: $zon-charcoal
-		background-color: $white
-		border: 2px solid $zon_light_grey
-		border-radius: 4px
-		font-size: $font-s
-		font-weight: bold
-		letter-spacing: 1px
-		line-height: normal
-		margin: remify(12px) 0
-		padding: remify(5px)
-		text-align: center
-		text-transform: uppercase
-
-		&:hover
-			background-color: $zon_lighter_grey
 		&:after
-			content: '\25B8' // ▸ = Black right-pointing small triangle
+			content: "\25B8" // ▸ = Black right-pointing small triangle
 			margin-left: 3px
 
 
