--- a/sass/web.site/screen.sass
+++ b/sass/web.site/screen.sass
@@ -18,6 +18,7 @@
 @import "modules/forms"
 @import "modules/header"
 @import "modules/nav"
+@import "modules/beta-badge"
 @import "modules/main"
 @import "modules/footer"
 @import "modules/parquet"
